--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -56,3 +56,12 @@
     border-color: var(--color-border);
   }
 }
+
+.scale-enter-active,
+.scale-leave-active {
+  transition: transform 0.1s;
+}
+.scale-enter-from,
+.scale-leave-to {
+  transform: scale(0.3);
+}
