--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -65,3 +65,12 @@
 .scale-leave-to {
   transform: scale(0.3);
 }
+
+.fade-enter-active,
+.scafadele-leave-active {
+  transition: opacity 0.5s ease;
+}
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
